# devops-standards

./: .dockerignore  .gitignore  CLAUDE.md  README.md
alert_auto_investigator/: Dockerfile  pyproject.toml
alert_auto_investigator/docs/: alert-expansion-policy.md  alert-key-strategy.md  aws-alarm-inventory.md  aws-operations.md  company-specific-assumptions.md  future-phases.md  investigation-layer-boundaries.md  openclaw-readonly-assist.md  support-matrix.md  target-group-k8s-enrichment.md
alert_auto_investigator/tests/: test_alertmanager_normalizer.py  test_anthropic_backend.py  test_assist_audit.py  test_assist_service.py  test_assist_validators.py  test_cloudwatch_alarm_normalizer.py  test_config.py  test_control_pipeline.py  test_control_store.py  test_e2e_investigation_flow.py  test_formatter.py  test_golden_replays.py  test_handler.py  test_main.py  test_normalized_alert_event.py  test_openclaw_dispatcher.py  test_runner_factory.py  test_slack_message_parser.py  test_target_group_enrichment.py
openclaw_foundation/: README.md  pyproject.toml
openclaw_foundation/fixtures/: deployment_restart_rate_request.json  deployment_status_request.json  investigation_request.json  pod_cpu_usage_request.json  pod_events_request.json  pod_logs_request.json  pod_runtime_request.json
openclaw_foundation/tests/: test_aws_adapter.py  test_aws_elasticache_cluster_status_tool.py  test_aws_load_balancer_status_tool.py  test_aws_rds_instance_status_tool.py  test_aws_target_group_status_tool.py  test_cli.py  test_golden_metadata_contract.py  test_kubernetes_adapter.py  test_kubernetes_deployment_status_tool.py  (+12 more)
self_service_copilot/: Dockerfile  README.md  pyproject.toml
(+184 files in other folders)
