[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-auto-investigator"
version = "0.1.0"
description = "Alert auto-investigator: normalizes and routes alerts to OpenClaw"
requires-python = ">=3.11"
dependencies = ["openclaw-foundation"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
