[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-foundation"
version = "0.1.0"
description = "Minimal executable OpenClaw foundation skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0,<2.0.0",
    "kubernetes>=30.0.0,<31.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
openclaw-foundation = "openclaw_foundation.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
