[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-service-copilot"
version = "0.1.0"
description = "Self-Service Ops Copilot Slack bot"
requires-python = ">=3.11"
dependencies = [
    "openclaw-foundation",
    "slack-bolt>=1.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
